# cs-auto

./: .gitignore  LICENSE  README.md  ReadMe.MD  about.html  babel.cfg  changelog.html  index.html  mobile.html  pyproject.toml  style.css  vercel.json
.github/workflows/: build.yml  static.yml
css/: about.css  changelog.css  home.css  main.css  mobile-changelog.css  mobile-home.css  mobile.css  style.css
languages/en/LC_MESSAGES/: messages.po
languages/ru/LC_MESSAGES/: messages.po
mobile/: about.html  changelog.html  index.html
scripts/: anchor.py  bundle.py  changelog.js  env.py  get_data.py  github_cl.py  github_md.py  home.js  live.py  live_dev.py  pyproject.toml  render.py  require.js  shared.py
templates/: base.jinja  changelog.jinja  index.jinja
www/: changelog.html  index.html
www/css/: main.css
www/ru/: index.html
